--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "nuxt-compress": "^2.0.0",
     "nuxt-fontawesome": "^0.4.0",
     "nuxt-lazy-load": "^1.2.4",
-    "simplebar-vue": "^1.5.1"
+    "simplebar-vue": "^1.5.1",
+    "vue-social-sharing": "^3.0.2"
   },
   "devDependencies": {}
 }
