Added meta info to portfolio

--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "@nuxt/content": "^1.10.0",
     "@nuxtjs/axios": "^5.12.0",
     "@nuxtjs/pwa": "^3.0.0-beta.20",
-    "nuxt": "^2.14.6",
+    "@nuxtjs/sitemap": "^2.4.0",
+    "nuxt": "^2.14.7",
+    "nuxt-canonical": "^1.0.5",
+    "nuxt-compress": "^3.0.0",
     "nuxt-fontawesome": "^0.4.0",
     "nuxt-lazy-load": "^1.2.4",
     "simplebar-vue": "^1.5.1",
